Tareas 1,2,3,4 sin pruebas

--- a/MyWallapop/src/main/resources/messages.properties
+++ b/MyWallapop/src/main/resources/messages.properties
@@ -2,3 +2,35 @@ welcome.message=Bienvenidos a la tienda online de los alumnos de SDI
 language.change= Idioma
 language.en=Ingles
 language.es=Español
+login.message=Identifícate
+signup.message=Regístrate
+
+Error.empty= Este campo no puede ser vacío
+Error.signup.email.duplicate=Ese Email ya existe
+Error.signup.passwordConfirm.coincidence=Las contraseñas no coinciden
+Error.signup.email.notexist=El email no existe
+Error.signup.password.incorrect=Contraseña incorrecta
+
+home.message=Bienvenido a la tienda online
+
+usuarioAutenticado.message=Usuario autenticado como :
+administradorAutenticado.message=Administrador autenticado como :
+
+registarse.title=Resgistrarte como usuario
+identificate.title=Identifícate
+gestionUsuarios.title=Gestión de usuarios
+verUsuarios.message=Ver usuarios
+
+password.title=Contraseña
+login.submit=Acceder
+email.placeholder=Introduzca email
+password.placeholder=Introduzca password
+nombre.title=Nombre
+apellidos.title=Apellidos
+repetirPassword.title=Repita la contraseña
+email.placeholder=Introduzca email
+password.placeholder=Introduzca contraseña
+
+table.users.update=Actualizar
+table.users.message=Lo usuarios registrados son:
+table.users.title=Usuarios
