--- a/MyWallapop/src/main/resources/messages_en.properties
+++ b/MyWallapop/src/main/resources/messages_en.properties
@@ -3,3 +3,33 @@ welcome.message=Welcome to the SDI studnets online store
 language.change=Language
 language.en=English
 language.es=Spanish
+login.message=Login up
+signup.message=Sign up
+
+Error.empty= This field is required
+Error.signup.email.duplicate=This Email already exist
+Error.signup.passwordConfirm.coincidence=These pass words don't match
+Error.signup.email.notexist=The Email doesn`t exist
+Error.signup.password.incorrect=Wrong password
+
+home.message=Welcome to online store
+
+usuarioAutenticado.message=User Authenticated as:
+administradorAutenticado.message=Admin Authenticated as:
+
+registarse.title=Resgister as user
+identificate.title=Identify
+gestionUsuarios.title=Users managment
+verUsuarios.message=View users
+
+password.title = Password
+login.submit = Login
+email.placeholder=Enter email
+password.placeholder=Enter password
+nombre.title=Nanme
+apellidos.title=Lastname
+repetirPassword.title=Repeat password
+
+table.users.update=Update
+table.users.message=The registered users are:
+table.users.title=Users
