Tarea 5 terminada (sin pruebas)

--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages.properties
@@ -34,3 +34,5 @@ password.placeholder=Introduzca contraseña
 table.users.update=Actualizar
 table.users.message=Lo usuarios registrados son:
 table.users.title=Usuarios
+users.delete.submit=Eliminar
+checkbox.select=Seleccionar
