--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
@@ -33,3 +33,5 @@ repetirPassword.title=Repeat password
 table.users.update=Update
 table.users.message=The registered users are:
 table.users.title=Users
+users.delete.submit=Delete
+checkbox.select=Select
