--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_es.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_es.properties
@@ -36,6 +36,8 @@ password.placeholder=Introduzca contraseña
 table.users.update=Actualizar
 table.users.message=Lo usuarios registrados son:
 table.users.title=Usuarios
+users.delete.submit=Eliminar
+checkbox.select=Seleccionar
 
 
 
