Se pueden crear ofertas asignadas a un usuario

--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages.properties
@@ -36,3 +36,17 @@ table.users.message=Lo usuarios registrados son:
 table.users.title=Usuarios
 users.delete.submit=Eliminar
 checkbox.select=Seleccionar
+
+
+Error.sale.title.range=El titulo debe tener entre 3 y 20 caracteres
+Error.sale.description.length = La descripcion no debe tener mas de 280 caracteres
+Error.sale.cost=Precio erroneo
+
+sale.add.title=Nueva oferta
+sale.add.saleTitle= Titulo
+sale.add.saleDescription= Descripcion
+sale.add.saleCost= Coste
+sale.add.send=Enviar
+
+sale.message=Ofertas
+sale.add=Nueva Oferta
