--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
@@ -35,3 +35,17 @@ table.users.message=The registered users are:
 table.users.title=Users
 users.delete.submit=Delete
 checkbox.select=Select
+
+Error.sale.title.range = Title must be between 3 and 20 characters
+Error.sale.description.length = Description must not be longer than 280 characters
+Error.sale.cost = Wrong price
+
+sale.add.title = New offer
+sale.add.saleTitle = Title
+sale.add.saleDescription = Description
+sale.add.saleCost = Cost
+sale.add.send = Send
+
+sale.message = Offers
+sale.add = New Offer 
+
