Erratas en los properties

--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 welcome.message=Bienvenidos a la tienda online de los alumnos de SDI
 language.change= Idioma
-language.en=Ingles
+language.en=Inglés
 language.es=Español
 login.message=Identifícate
 signup.message=Regístrate
@@ -16,7 +16,7 @@ home.message=Bienvenido a la tienda online
 usuarioAutenticado.message=Usuario autenticado como:
 administradorAutenticado.message=Administrador autenticado como:
 
-registarse.title=Resgistrarte como usuario
+registarse.title=Resgístrate como usuario
 identificate.title=Identifícate como usuario
 gestionUsuarios.title=Gestión de usuarios
 verUsuarios.message=Ver usuarios
