--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_es.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_es.properties
@@ -1,10 +1,9 @@
 welcome.message=Bienvenidos a la tienda online de los alumnos de SDI
 language.change= Idioma
-language.en=Ingles
+language.en=Inglés
 language.es=Español
 login.message=Identifícate
 signup.message=Regístrate
-
 
 Error.empty= Este campo no puede ser vacío
 Error.signup.email.duplicate=Ese Email ya existe
@@ -17,7 +16,7 @@ home.message=Bienvenido a la tienda online
 usuarioAutenticado.message=Usuario autenticado como:
 administradorAutenticado.message=Administrador autenticado como:
 
-registarse.title=Resgistrarte como usuario
+registarse.title=Resgístrate como usuario
 identificate.title=Identifícate como usuario
 gestionUsuarios.title=Gestión de usuarios
 verUsuarios.message=Ver usuarios
@@ -29,7 +28,6 @@ password.placeholder=Introduzca password
 nombre.title=Nombre
 apellidos.title=Apellidos
 repetirPassword.title=Repita la contraseña
-enviar.submit=Enviar
 email.placeholder=Introduzca email
 password.placeholder=Introduzca contraseña
 
@@ -38,7 +36,4 @@ table.users.message=Lo usuarios registrados son:
 table.users.title=Usuarios
 users.delete.submit=Eliminar
 checkbox.select=Seleccionar
-
-
-
 
