--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
@@ -1,4 +1,4 @@
-welcome.message=Welcome to the SDI studnets online store
+welcome.message=Welcome to the SDI students online store
 
 language.change=Language
 language.en=English
@@ -8,8 +8,8 @@ signup.message=Sign up
 
 Error.empty= This field is required
 Error.signup.email.duplicate=This Email already exist
-Error.signup.passwordConfirm.coincidence=These pass words don't match
-Error.signup.email.notexist=The Email doesn`t exist
+Error.signup.passwordConfirm.coincidence=These pass words do not match
+Error.signup.email.notexist=The Email does not exist
 Error.signup.password.incorrect=Wrong password
 
 home.message=Welcome to online store
@@ -17,17 +17,17 @@ home.message=Welcome to online store
 usuarioAutenticado.message=User Authenticated as:
 administradorAutenticado.message=Admin Authenticated as:
 
-registarse.title=Resgister as user
+registarse.title=Register as user
 identificate.title=Identify as user
-gestionUsuarios.title=Users managment
+gestionUsuarios.title=Users management
 verUsuarios.message=View users
 
 password.title = Password
 login.submit = Login
 email.placeholder=Enter email
 password.placeholder=Enter password
-nombre.title=Nanme
-apellidos.title=Lastname
+nombre.title=Name
+apellidos.title=Surname
 repetirPassword.title=Repeat password
 
 table.users.update=Update
