Agregados elementos de seguridad en sale Solo usuarios pueden acceder a las vistas sale Solo el propio usuario puede eliminarlo

--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
@@ -51,6 +51,7 @@ sale.add.send = Send
 
 sale.message = Offers
 sale.add = New Offer
+sale.list = My Offers 
 
 sale.list.title = Your Offers 
 sale.delete.submit = Delete offers 
