--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_es.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_es.properties
@@ -52,6 +52,7 @@ sale.add.send=Enviar
 
 sale.message=Ofertas
 sale.add=Nueva Oferta
+sale.list=Mis Ofertas
 
 sale.list.title=Tus Ofertas
 sale.delete.submit=Eliminar ofertas
