Tarea 3.9 acabada (sin pruebas)

--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages.properties
@@ -2,13 +2,13 @@ welcome.message=Bienvenidos a la tienda online de los alumnos de SDI
 language.change= Idioma
 
 language.en=Ingles
-language.es=Español
+language.es=Espaï¿½ol
 login.message=Identificate
 signup.message=Registrate
 
 Error.empty= Este campo no puede ser vacio
 Error.signup.email.duplicate=Ese Email ya existe
-Error.signup.passwordConfirm.coincidence=Las contraseñas no coinciden
+Error.signup.passwordConfirm.coincidence=Las contraseï¿½as no coinciden
 Error.signup.email.notexist=El email no existe
 Error.signup.password.incorrect=ContraseÃ±a incorrecta
 
@@ -23,15 +23,15 @@ gestionUsuarios.title=Gestion de usuarios
 
 verUsuarios.message=Ver usuarios
 
-password.title=Contraseña
+password.title=Contraseï¿½a
 login.submit=Acceder
 email.placeholder=Introduzca email
 password.placeholder=Introduzca password
 nombre.title=Nombre
 apellidos.title=Apellidos
-repetirPassword.title=Repita la contraseña
+repetirPassword.title=Repita la contraseï¿½a
 email.placeholder=Introduzca email
-password.placeholder=Introduzca contraseña
+password.placeholder=Introduzca contraseï¿½a
 
 table.users.update=Actualizar
 table.users.message=Lo usuarios registrados son:
@@ -55,3 +55,14 @@ sale.list=Mis Ofertas
 
 sale.list.title=Tus Ofertas
 sale.delete.submit=Eliminar ofertas
+
+pagination.first=Primera
+pagination.last=Ãšltima
+
+shopping.title=Ofertas que puedes comprar
+find.submit=Buscar
+
+sale.buy.submit=Comprar
+sale.sold=Vendido
+
+shopping.message=Ir de compras
