--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
@@ -55,3 +55,14 @@ sale.list = My Offers
 
 sale.list.title = Your Offers 
 sale.delete.submit = Delete offers 
+
+pagination.first=First
+pagination.last=Last
+
+shopping.title=Sales that you can buy
+find.submit=Find
+
+sale.buy.submit=Buy
+sale.sold=Sold
+
+shopping.message=Go shopping
