--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_es.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_es.properties
@@ -1,14 +1,14 @@
 welcome.message=Bienvenidos a la tienda online de los alumnos de SDI
 language.change= Idioma
 language.en=Ingles
-language.es=Español
+language.es=Espaï¿½ol
 login.message=Identificate
 signup.message=Registrate
 
 
 Error.empty= Este campo no puede ser vacÃ­o
 Error.signup.email.duplicate=Ese Email ya existe
-Error.signup.passwordConfirm.coincidence=Las contraseñas no coinciden
+Error.signup.passwordConfirm.coincidence=Las contraseï¿½as no coinciden
 Error.signup.email.notexist=El email no existe
 Error.signup.password.incorrect=ContraseÃ±a incorrecta
 
@@ -56,3 +56,14 @@ sale.list=Mis Ofertas
 
 sale.list.title=Tus Ofertas
 sale.delete.submit=Eliminar ofertas
+
+pagination.first=Primera
+pagination.last=Ãšltima
+
+shopping.title=Ofertas que puedes comprar
+find.submit=Buscar
+
+sale.buy.submit=Comprar
+sale.sold=Vendido
+
+shopping.message=Ir de compras
