--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_es.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_es.properties
@@ -67,3 +67,9 @@ sale.buy.submit=Comprar
 sale.sold=Vendido
 
 shopping.message=Ir de compras
+
+user.insuficientMoney1= Usted dispone de una cantidad de 
+user.insuficientMoney2= Inserte mas saldo para poder realizar la compra de 
+user.insuficientMoney3= con un coste de 
+users.insuficientMoney.submit = Aceptar
+user.insuficientMoney.title = Saldo insuficiente
