Ampliación 6.4 terminada (sin pruebas)

--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
@@ -42,6 +42,7 @@ checkbox.select = Select
 Error.sale.title.range = Title must be between 3 and 20 characters
 Error.sale.description.length = Description must not be longer than 280 characters
 Error.sale.cost = Wrong price
+Error.sale.money=To Highlight a sale you should have 20 euros or more
 
 sale.add.title = New offer
 sale.add.saleTitle = Title
@@ -74,3 +75,8 @@ user.insuficientMoney2 = Insert more balance to be able to make the purchase of
 user.insuficientMoney3 = with a cost of
 users.insuficientMoney.submit = Accept
 user.insuficientMoney.title = Insufficient balance 
+
+outstanding.message=OUTSTANDING
+
+sale.highlight.submit=Highlight
+sale.unhighlight.submit=Unhighlight
