--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/test/java/messages_en.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/test/java/messages_en.properties
@@ -1,37 +1,82 @@
-welcome.message=Welcome to the SDI studnets online store
+welcome.message = Welcome to the SDI students online store
+language.change = Language
 
-language.change=Language
-language.en=English
-language.es=Spanish
-login.message=Login up
-signup.message=Sign up
+language.en = English
+language.es = Spanish
+login.message = Identify
+signup.message = Sign up
 
-Error.empty= This field is required
-Error.signup.email.duplicate=This Email already exist
-Error.signup.passwordConfirm.coincidence=These pass words don't match
-Error.signup.email.notexist=The Email doesn`t exist
-Error.signup.password.incorrect=Wrong password
+Error.empty = This field cannot be empty
+Error.signup.email.duplicate = That Email already exists
+Error.signup.passwordConfirm.coincidence = Passwords do not match
+Error.signup.email.notexist = Email does not exist
+Error.signup.password.incorrect = Incorrect password
 
-home.message=Welcome to online store
+home.message = Welcome to the online store
 
-usuarioAutenticado.message=User Authenticated as:
-administradorAutenticado.message=Admin Authenticated as:
+userAuthenticated.message = User authenticated as:
+administratorAutenticado.message = Administrator authenticated as:
 
-registarse.title=Resgister as user
-identificate.title=Identify as user
-gestionUsuarios.title=Users managment
-verUsuarios.message=View users
+registarse.title = Register as a user
+identificate.title = Identify yourself
+gestionUsuarios.title = User management
+
+verUsuaries.message = View users
 
 password.title = Password
 login.submit = Login
-email.placeholder=Enter email
-password.placeholder=Enter password
-nombre.title=Nanme
-apellidos.title=Lastname
-repetirPassword.title=Repeat password
+email.placeholder = Enter email
+password.placeholder = Enter password
+name.title = Name
+Surname.title = Surname
+repeatPassword.title = Repeat password
+email.placeholder = Enter email
+password.placeholder = Enter password
 
-table.users.update=Update
-table.users.message=The registered users are:
-table.users.title=Users
-users.delete.submit=Delete
-checkbox.select=Select
+table.users.update = Update
+table.users.message = Registered users are:
+table.users.title = Users
+users.delete.submit = Delete
+checkbox.select = Select
+
+Error.sale.title.range = Title must be between 3 and 20 characters
+Error.sale.description.length = Description must not be longer than 280 characters
+Error.sale.cost = Wrong price
+Error.sale.money=To Highlight a sale you should have 20 euros or more
+
+sale.add.title = New offer
+sale.add.saleTitle = Title
+sale.add.saleDescription = Description
+sale.add.saleCost = Cost
+sale.add.send = Send
+
+sale.message = Offers
+sale.add = New Offer
+sale.list = My Offers 
+
+sale.list.title = Your Offers 
+sale.delete.submit = Delete offers 
+
+pagination.first=First
+pagination.last=Last
+
+shopping.title=Sales that you can buy
+find.submit=Find
+
+sale.buy.submit=Buy
+sale.sold=Sold
+
+shopping.message=Go shopping
+
+checkbox.outstanding=Highlight offer 
+
+user.insuficientMoney1 = You have an amount of
+user.insuficientMoney2 = Insert more balance to be able to make the purchase of
+user.insuficientMoney3 = with a cost of
+users.insuficientMoney.submit = Accept
+user.insuficientMoney.title = Insufficient balance 
+
+outstanding.message=OUTSTANDING
+
+sale.highlight.submit=Highlight
+sale.unhighlight.submit=Unhighlight
