--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages.properties
@@ -74,3 +74,6 @@ outstanding.message=DESTACADA
 
 sale.highlight.submit=Destacar
 sale.unhighlight.submit=No destacar
+
+sale.userBuys.title=Ofertas compradas
+sale.userBuys.seller=Vendedor
