--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
@@ -80,3 +80,6 @@ outstanding.message=OUTSTANDING
 
 sale.highlight.submit=Highlight
 sale.unhighlight.submit=Unhighlight
+
+sale.userBuys.title = Offers purchased
+sale.userBuys.seller = Seller 
