Agregada seguridad de compras

--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages.properties
@@ -77,3 +77,7 @@ sale.unhighlight.submit=No destacar
 
 sale.userBuys.title=Ofertas compradas
 sale.userBuys.seller=Vendedor
+
+error.sale.invalidUser= No puedes comprar tus propios productos
+error.sale.notAvailable= El producto que quieres comprar ya no esta en venta
+error.sale.insufficientMoney= No tienes suficiente saldo para realizar la compra
