--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_es.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_es.properties
@@ -72,13 +72,6 @@ shopping.message=Ir de compras
 
 checkbox.outstanding=Destacar oferta
 
-user.insuficientMoney1= Usted dispone de una cantidad de 
-user.insuficientMoney2= Inserte mas saldo para poder realizar la compra de 
-user.insuficientMoney3= con un coste de 
-users.insuficientMoney.submit = Aceptar
-user.insuficientMoney.title = Saldo insuficiente
-
-
 outstanding.message=DESTACADA
 
 sale.highlight.submit=Destacar
@@ -86,3 +79,7 @@ sale.unhighlight.submit=No destacar
 
 sale.userBuys.title=Ofertas compradas
 sale.userBuys.seller=Vendedor
+
+error.sale.invalidUser= No puedes comprar tus propios productos
+error.sale.notAvailable= El producto que quieres comprar ya no esta en venta
+error.sale.insufficientMoney= No tienes suficiente saldo para realizar la compra
