Añadidas los test del punto 3.10

--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/test/java/com/uniovi/messages_en.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/test/java/com/uniovi/messages_en.properties
@@ -70,13 +70,14 @@ shopping.message=Go shopping
 
 checkbox.outstanding=Highlight offer 
 
-user.insuficientMoney1 = You have an amount of
-user.insuficientMoney2 = Insert more balance to be able to make the purchase of
-user.insuficientMoney3 = with a cost of
-users.insuficientMoney.submit = Accept
-user.insuficientMoney.title = Insufficient balance 
-
 outstanding.message=OUTSTANDING
 
 sale.highlight.submit=Highlight
 sale.unhighlight.submit=Unhighlight
+
+sale.userBuys.title = Offers purchased
+sale.userBuys.seller = Seller 
+
+error.sale.invalidUser = You cannot buy your own products
+error.sale.notAvailable = The product you want to buy is no longer for sale
+error.sale.insufficientMoney = You do not have enough balance to make the purchase 
