Test de internacionalizacion terminados.Todos los text corregidos y funcionando

--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
@@ -14,21 +14,21 @@ Error.signup.password.incorrect = Incorrect password
 
 home.message = Welcome to the online store
 
-userAuthenticated.message = User authenticated as:
-administratorAutenticado.message = Administrator authenticated as:
+usuarioAutenticado.message = User authenticated as:
+administradorAutenticado.message = Administrator authenticated as:
 
 registarse.title = Register as a user
 identificate.title = Identify yourself
 gestionUsuarios.title = User management
 
-verUsuaries.message = View users
+verUsuarios.message = View users
 
 password.title = Password
 login.submit = Login
 email.placeholder = Enter email
 password.placeholder = Enter password
-name.title = Name
-Surname.title = Surname
+nombre.title = Name
+apellidos.title= Surname
 repeatPassword.title = Repeat password
 email.placeholder = Enter email
 password.placeholder = Enter password
