Añadida funcionalidad de 6.1

--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
@@ -81,3 +81,9 @@ sale.userBuys.seller = Seller
 error.sale.invalidUser = You cannot buy your own products
 error.sale.notAvailable = The product you want to buy is no longer for sale
 error.sale.insufficientMoney = You do not have enough balance to make the purchase 
+
+sale.conversation.title = Conversation
+sale.conversation.email = Email 
+sale.conversation.mensaje = Message
+sale.conversation.date = Date
+sale.conversation.time = Time 
