--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages.properties
@@ -81,3 +81,9 @@ sale.userBuys.seller=Vendedor
 error.sale.invalidUser= No puedes comprar tus propios productos
 error.sale.notAvailable= El producto que quieres comprar ya no esta en venta
 error.sale.insufficientMoney= No tienes suficiente saldo para realizar la compra
+
+sale.conversation.title=Conversacion
+sale.conversation.email= Email
+sale.conversation.mensaje= Mensaje
+sale.conversation.date= Fecha
+sale.conversation.time = Hora
