--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_en.properties
@@ -87,3 +87,8 @@ sale.conversation.email = Email
 sale.conversation.mensaje = Message
 sale.conversation.date = Date
 sale.conversation.time = Time 
+
+conversation.list.title = Your conversations
+conversation.list.email = Advertiser email
+conversation.list.sale = Title 
+conversation.list.chat = Chat 
