--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_es.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/main/resources/messages_es.properties
@@ -89,3 +89,8 @@ sale.conversation.email= Email
 sale.conversation.mensaje= Mensaje
 sale.conversation.date= Fecha
 sale.conversation.time = Hora
+
+conversation.list.title=Tus conversaciones
+conversation.list.email=Email anunciante
+conversation.list.sale=Titulo
+conversation.list.chat = Chat 
