cambio de test properties

--- a/sdi-entrega1-2021-316-2021-308-2021-311/src/test/java/com/uniovi/messages_es.properties
+++ b/sdi-entrega1-2021-316-2021-308-2021-311/src/test/java/com/uniovi/messages_es.properties
@@ -83,3 +83,14 @@ sale.userBuys.seller=Vendedor
 error.sale.invalidUser= No puedes comprar tus propios productos
 error.sale.notAvailable= El producto que quieres comprar ya no esta en venta
 error.sale.insufficientMoney= No tienes suficiente saldo para realizar la compra
+
+sale.conversation.title=Conversacion
+sale.conversation.email= Email
+sale.conversation.mensaje= Mensaje
+sale.conversation.date= Fecha
+sale.conversation.time = Hora
+
+conversation.list.title=Tus conversaciones
+conversation.list.email=Email anunciante
+conversation.list.sale=Titulo
+conversation.list.chat = Chat 
